fix for minus button visibility in reorder ultimate 2

--- a/src/stylesheets/userscripts/_wk_reorder_ultimate_2.scss
+++ b/src/stylesheets/userscripts/_wk_reorder_ultimate_2.scss
@@ -2,9 +2,9 @@
 
 %minimise-button {
     .icon-minus, .icon-plus {
-        @extend %no-background-color;
         @extend %borderless;
         @extend %shadowless;
+        background-color: $text-color !important;
     }
 }
 
